# omn-actix-app

./: .env.example  .gitignore  Cargo.toml  README.md
omn-core/: Cargo.toml
omn-core/src/: lib.rs
omn-core/src/fakes/: database.rs  mod.rs
omn-server/: Cargo.toml
omn-server/src/: main.rs
